--- a/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,8 @@
                 android:text="LOGIN"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:id="@+id/loginButton"/>
+                android:id="@+id/loginButton"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
