--- a/Android/SriverForUser/app/src/main/res/layout/activity_main.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/layout_Main"
-    android:background="#ffffff">
+    android:background="#00ff00">
 
 
 </RelativeLayout>
