--- a/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
                 android:drawableStart="@drawable/ic_person_black_24dp"
                 android:drawableLeft="@drawable/ic_person_black_24dp"
                 android:layout_marginTop="50dp"
-                android:background="@color/colorTextBackground"
+                android:background="@color/colorPrimary"
                 />
             <EditText
                 android:inputType="textPassword"
@@ -77,7 +77,7 @@
                 android:drawableStart="@drawable/ic_lock_black_24dp"
                 android:drawableLeft="@drawable/ic_lock_black_24dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/colorTextBackground"
+                android:background="@color/colorPrimary"
                 />
 
             <Button
