--- a/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
@@ -4,103 +4,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="@drawable/background">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#30000000"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
 
-        <LinearLayout
+        android:gravity="center">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="225dp"
+            android:layout_height="2dp"
+            android:background="@color/colorWhite"
+            android:layout_marginBottom="20dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SRIVER."
+            android:textSize="70dp"
+            android:textColor="@color/colorWhite"
+            android:fontFamily="@font/KoolBean"
+            android:layout_marginBottom="20dp"
+            />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/colorWhite"
+            android:layout_marginBottom="75dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
             android:orientation="vertical"
-            android:background="@color/colorPrimary">
+            android:background="@drawable/window_background_round"
+            android:padding="20dp"
+            android:gravity="center"
+            >
 
-            <ImageView
-                android:layout_width="125dp"
-                android:layout_height="125dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/logo"/>
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="SRIVER"
-                android:textColor="#ffffff"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"/>
-            <TextView
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="15dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginRight="10dp">
+
+                    <EditText
+                        android:id="@+id/idText"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:hint="ID"
+                        android:layout_gravity="center"
+                        android:padding="10dp"
+                        android:textColor="@color/colorWhite"
+                        android:textColorHint="@color/colorWhite"
+                        android:textStyle="bold"
+                        />
+                    <EditText
+                        android:id="@+id/passwordText"
+                        android:inputType="textPassword"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:hint="PW"
+                        android:layout_gravity="center"
+                        android:padding="10dp"
+                        android:textColor="@color/colorWhite"
+                        android:textColorHint="@color/colorWhite"
+                        android:textStyle="bold"
+                        />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/loginButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/button_background_round"
+                    android:text="LOGIN"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Insert your ID and PassWord!"
-                android:textColor="#ffffff"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                />
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아이디/비밀번호 저장"
+                    android:textStyle="bold"
+                    android:layout_marginRight="20dp"/>
+                <TextView
+                    android:id="@+id/registerButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="회원가입"
+                    android:textStyle="bold"/>
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
 
-            <EditText
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:hint="ID"
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                android:id="@+id/idText"
-                android:drawableStart="@drawable/ic_person_black_24dp"
-                android:drawableLeft="@drawable/ic_person_black_24dp"
-                android:layout_marginTop="50dp"
-                android:background="@color/colorPrimary"
-                />
-            <EditText
-                android:inputType="textPassword"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:hint="PW"
-                android:layout_gravity="center"
-                android:padding="10dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff"
-                android:id="@+id/passwordText"
-                android:drawableStart="@drawable/ic_lock_black_24dp"
-                android:drawableLeft="@drawable/ic_lock_black_24dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary"
-                />
 
-            <Button
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:background="@color/colorPrimary"
-                android:text="LOGIN"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                android:id="@+id/loginButton"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="18dp"
-                android:text="SIGN UP"
-                android:id="@+id/registerButton"/>
-        </LinearLayout>
     </LinearLayout>
-
 </RelativeLayout>
