--- a/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_login.xml
@@ -97,23 +97,35 @@
                     android:textSize="20dp"
                     />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/ll_bottom"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="아이디/비밀번호 저장"
-                    android:textStyle="bold"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_height="wrap_content">
+                    <CheckBox
+                        android:id="@+id/cb_Login_AutoLogin"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/checkbox"
+                        android:button="@color/colorGray"
+                        android:checked="true"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="자동 로그인"
+                        android:layout_marginLeft="5dp"
+                        android:textStyle="bold"/>
+                </LinearLayout>
                 <TextView
                     android:id="@+id/registerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="회원가입"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    android:textStyle="bold"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
 
         </LinearLayout>
 
