--- a/Android/SriverForUser/app/src/main/res/layout/reservation_dialog.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/reservation_dialog.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#000000"
+    android:background="@drawable/dialog_backgound"
     android:layout_gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="30dp"
+    android:paddingBottom="30dp"
+    android:paddingRight="20dp"
+    android:paddingLeft="20dp">
 
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_check_black_24dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="25dp"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="이곳에 주차하시겟습니까?"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이곳에 주차하시겠습니까?"
+        android:textColor="@color/colorWhite"
+        android:textSize="27dp"
+        android:textStyle="bold"
+        android:layout_marginBottom="15dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right">
+        android:gravity="center"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/tv_ReservationDialog_Ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="확인"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorWhite"
             android:textSize="25dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="15dp"/>
 
         <TextView
             android:id="@+id/tv_ReservationDialog_Cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="취소"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorWhite"
             android:textSize="25dp"/>
     </LinearLayout>
 
