--- a/Android/SriverForUser/app/src/main/res/layout/userproperty.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/userproperty.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#94f4a0"
+    android:background="#FFBAE3BF"
     android:orientation="vertical"
     >
 
