--- a/Android/SriverForUser/app/src/main/res/layout/activity_register.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_register.xml
@@ -40,8 +40,8 @@
                     android:layout_gravity="center"
                     android:hint="ID"
                     android:padding="10dp"
-                    android:textColor="@color/colorWhite"
-                    android:textColorHint="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
+                    android:textColorHint="@color/colorBlack"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
@@ -60,8 +60,8 @@
                 android:hint="PASSWORD"
                 android:layout_gravity="center"
                 android:padding="10dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorBlack"
+                android:textColorHint="@color/colorBlack"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp"
@@ -73,8 +73,8 @@
                 android:hint="EMAIL"
                 android:layout_gravity="center"
                 android:padding="10dp"
-                android:textColor="@color/colorWhite"
-                android:textColorHint="@color/colorWhite"
+                android:textColor="@color/colorBlack"
+                android:textColorHint="@color/colorBlack"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp"
@@ -105,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="MAN"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textStyle="bold"
                     android:textSize="18dp"
                     android:checked="true"
@@ -115,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="WOMAN"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textStyle="bold"
                     android:textSize="18dp"/>
             </RadioGroup>
