--- a/Android/SriverForUser/app/src/main/res/layout/reservation_dialog.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/reservation_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이곳에 주차하시겠습니까?"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorBlack"
         android:textSize="27dp"
         android:textStyle="bold"
         android:layout_marginBottom="15dp"/>
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="확인"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:textSize="25dp"
             android:layout_marginRight="15dp"/>
 
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="취소"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:textSize="25dp"/>
     </LinearLayout>
 
