--- a/Android/SriverForUser/app/src/main/res/drawable/edge_empty.xml
+++ b/Android/SriverForUser/app/src/main/res/drawable/edge_empty.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-        <solid android:color="#ffffff" />
+        <solid android:color="#6cbb76" />
         <stroke
             android:width="3dp"
-            android:color="#000000" />
+            android:color="#ffffff" />
 
 
 </shape>
