--- a/Android/SriverForUser/app/src/main/res/layout/userproperty.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/userproperty.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFBAE3BF"
+    android:background="#024741"
     android:orientation="vertical"
     >
 
@@ -24,19 +24,19 @@
         android:layout_centerInParent="true"
         android:layout_below="@+id/parkingLogo"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SeoYouJin9898"
+            android:text="YouJin9898"
             android:fontFamily="@font/koolbean"
-            android:textSize="25dp"
-            />
+            android:textSize="20dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" 님"
             android:textStyle="bold"
-            android:textSize="25dp"/>
+            android:textSize="20dp"/>
 
     </LinearLayout>
 
@@ -72,12 +72,12 @@
 
     <TextView
         android:id="@+id/tv_UserProperty_LogOut"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그아웃"
         android:textSize="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
         android:layout_below="@+id/carName"
         android:layout_marginBottom="5dp"/>
 
