--- a/Android/SriverForUser/app/src/main/res/drawable/edge_myparking.xml
+++ b/Android/SriverForUser/app/src/main/res/drawable/edge_myparking.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-<solid android:color="#3558ab" />
+<solid android:color="#01acbd" />
 <stroke
     android:width="3dp"
-    android:color="#ffffff" />
+    android:color="@color/colorBlack" />
 
 </shape>
