--- a/Android/SriverForUser/app/src/main/res/drawable/edge_noparking.xml
+++ b/Android/SriverForUser/app/src/main/res/drawable/edge_noparking.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-        <solid android:color="#ff0000" />
+        <solid android:color="#d9d9d9" />
         <stroke
             android:width="3dp"
-            android:color="#ffffff" />
+            android:color="@color/colorBlack" />
 
 </shape>
