--- a/Android/SriverForUser/app/src/main/res/layout/activity_main.xml
+++ b/Android/SriverForUser/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,13 +15,13 @@
             android:id="@+id/customView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#6cbb76" />
+            android:background="@color/colorWhite" />
     </FrameLayout>
     <RelativeLayout
         android:id="@+id/layout_Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#6cbb76">
+        android:background="#045c55">
 
         <ImageButton
             android:layout_width="50dp"
@@ -62,9 +61,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        android:background="@color/colorWhite"
-        android:layout_below="@+id/layout_Title"
-
-        />
+        android:background="#045c55"
+        android:layout_below="@+id/layout_Title"/>
 
 </RelativeLayout>
